---
source: src/format.rs
expression: "format_str(indoc!\n{\n    r#\"\n        \tfunction()\n                if (foo) bar else baz\n\n        \tfunction() {\n                if (foo) bar else baz\n            }\n        \"#\n}).unwrap()"
---
function() {
  if (foo) bar else baz
}

function() {
  if (foo) bar else baz
}
